--- a/Views/Admin/RequestedInvoice.cshtml
+++ b/Views/Admin/RequestedInvoice.cshtml
@@ -119,7 +119,7 @@
                                         @if (!string.IsNullOrEmpty(item.InvUpload))
                                         {
                                             <td>
-                                                @if (item.InvUploadDate == "01/01/1900")
+                                                @if (item.InvUploadDate == "01-01-1900")
                                                 {
 
                                                 }
