Order by Solved and Stock Issue Solved

--- a/Views/Admin/RequestPayment.cshtml
+++ b/Views/Admin/RequestPayment.cshtml
@@ -117,7 +117,7 @@
                                         <tr class="suc-tbl-row">
                                             <td></td>
                                             <td>
-                                                @if (item.POADate == "01/01/1900")
+                                                @if (item.POADate == "01-01-1900")
                                                 {
 
                                                 }
