--- a/Views/Admin/POPayment.cshtml
+++ b/Views/Admin/POPayment.cshtml
@@ -292,20 +292,40 @@
                         </div>
                         <!-- /.box-body -->
                         <div class="box-footer">
-                            <div class="col-md-12">
-                                <div class="box-tools pull-left">
-                                    <button type="submit" name="@actBtn.ToLower()" class="btn bg-aqua" title="@actBtn"
-                                            value="@actBtn">
-                                        @actBtn.ToUpper()
-                                    </button>
+                            @if (Model.UserProfileModels.EmpType == "User" && Model.POPaymentModels.VendorAmount != 0)
+                            {
+                                <div class="col-md-12">
+                                    <div class="box-tools pull-left">
+                                        <button type="submit" name="@actBtn.ToLower()" class="btn bg-aqua" title="@actBtn"
+                                                value="@actBtn">
+                                            @actBtn.ToUpper()
+                                        </button>
+                                    </div>
+                                    <div class="box-tools pull-right">
+                                        <button type="submit" name="reset" class="btn btn-clear cancel" title="Reset"
+                                                value="reset" formnovalidate="formnovalidate">
+                                            RESET
+                                        </button>
+                                    </div>
                                 </div>
-                                <div class="box-tools pull-right">
-                                    <button type="submit" name="reset" class="btn btn-clear cancel" title="Reset"
-                                            value="reset" formnovalidate="formnovalidate">
-                                        RESET
-                                    </button>
+                            }
+                            else
+                            {
+                                <div class="col-md-12">
+                                    <div class="box-tools pull-left">
+                                        <button type="submit" name="@actBtn.ToLower()" class="btn bg-aqua" title="@actBtn"
+                                                value="@actBtn">
+                                            @actBtn.ToUpper()
+                                        </button>
+                                    </div>
+                                    <div class="box-tools pull-right">
+                                        <button type="submit" name="reset" class="btn btn-clear cancel" title="Reset"
+                                                value="reset" formnovalidate="formnovalidate">
+                                            RESET
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
+                            }
                         </div>
                         <!-- /.box-footer-->
                     </div>
@@ -334,7 +354,10 @@
                                 <thead>
                                     <tr>
                                         <th>SNo.</th>
-                                        <th>Action</th>
+                                        @if (Model.UserProfileModels.EmpType != "User")
+                                        {
+                                            <th>Action</th>
+                                        }
                                         <th>@Html.DisplayNameFor(model => model.POPaymentModelList.FirstOrDefault().PaymentMode)</th>
                                         <th>@Html.DisplayNameFor(model => model.POPaymentModelList.FirstOrDefault().Amount)</th>
                                         <th>@Html.DisplayNameFor(model => model.POPaymentModelList.FirstOrDefault().NoOfDays)</th>
@@ -346,22 +369,25 @@
                                 </thead>
                                 <tbody>
                                     @foreach (var u in Model.POPaymentModelList)
-                                        {
-                                            <tr>
-                                                <td></td>
+                                    {
+                                        <tr>
+                                            <td></td>
+                                            @if (Model.UserProfileModels.EmpType != "User")
+                                            {
                                                 <td>
                                                     @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditPOPayment", "Admin", new { id = u.Id }, new { @class = "btn btn-edt bg-aqua", title = "Edit" })
                                                     @Html.EncodedActionLink("<i class='fa fa-times'></i>", "DeletePOPayment", "Admin", new { id = u.Id }, new { data_box = "#mb-act-cnfrm", @class = "btn btn-del m-l-5 mb-act-confirm bg-m-red", title = "Delete" })
                                                 </td>
-                                                <td>@Html.DisplayFor(modelSKU => u.PaymentMode) </td>
-                                                <td>@Html.DisplayFor(modelSKU => u.Amount) </td>
-                                                <td>@Html.DisplayFor(modelSKU => u.NoOfDays) </td>
-                                                <td>@Html.DisplayFor(modelSKU => u.ChequeNo) </td>
-                                                <td>@Html.DisplayFor(modelSKU => u.PaymentDate) </td>
-                                                <td>@Html.DisplayFor(modelSKU => u.Remark) </td>
-                                                <td><a href='~/Content/upload/popayment/@u.PaymentSlip' target="_blank">Download</a></td>
-                                            </tr>
-                                        }
+                                            }
+                                            <td>@Html.DisplayFor(modelSKU => u.PaymentMode) </td>
+                                            <td>@Html.DisplayFor(modelSKU => u.Amount) </td>
+                                            <td>@Html.DisplayFor(modelSKU => u.NoOfDays) </td>
+                                            <td>@Html.DisplayFor(modelSKU => u.ChequeNo) </td>
+                                            <td>@Html.DisplayFor(modelSKU => u.PaymentDate) </td>
+                                            <td>@Html.DisplayFor(modelSKU => u.Remark) </td>
+                                            <td><a href='~/Content/upload/popayment/@u.PaymentSlip' target="_blank">Download</a></td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
