--- a/Views/Admin/PaymentProcessing.cshtml
+++ b/Views/Admin/PaymentProcessing.cshtml
@@ -67,20 +67,6 @@
                                 })
                             </div>
                         </div>
-                        @*<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.Status, new { @class = "form-control-label" })
-                                    @Html.DropDownListFor(m => m.Status,
-                                   new List<SelectListItem>
-                                      {
-                                        new SelectListItem{ Text="Success", Value = "Success", Selected = true },
-                                        new SelectListItem{ Text="Pending", Value = "Pending" },
-                                      },
-                                    "--Select Status--", new { @class = "form-control select2" })
-                                    @Html.ValidationMessageFor(m => m.Status, "",
-                            new { @class = "text-danger" })
-                                </div>
-                            </div>*@
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="box-tools pull-left">
                                 <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
@@ -119,7 +105,7 @@
                                             <td></td>
                                             <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                             <td>
-                                                @if (item.PADate == "01/01/1900")
+                                                @if (item.PADate == "01-01-1900")
                                                 {
 
                                                 }
@@ -153,11 +139,11 @@
                                             <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
-                                                @if (item.Status != "Material Received")
-                                                {
+                                                @*@if (item.Status != "Material Received")
+                                                {*@
                                                     @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
                                                      new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                                }
+                                                @*}*@
                                             </td>
                                         </tr>
                                     }
