--- a/Views/Admin/_PartialTopLeftNavBar.cshtml
+++ b/Views/Admin/_PartialTopLeftNavBar.cshtml
@@ -21,6 +21,49 @@
             <span class="sr-only">Toggle navigation</span>
         </a>
         <div class="navbar-custom-menu">
+            <!--<ul class="nav navbar-nav">
+                <li class="dropdown notifications-menu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                        <i class="fa fa-bell-o"></i>
+                        <span class="label label-warning">10</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="header">You have 10 notifications</li>
+                        <li>-->
+                            <!-- inner menu: contains the actual data -->
+                            <!--<ul class="menu">
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
+                                        page and may cause design problems
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-users text-red"></i> 5 new members joined
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-shopping-cart text-green"></i> 25 sales made
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-user text-red"></i> You changed your username
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="footer"><a href="#">View all</a></li>
+                    </ul>
+                </li>
+            </ul>-->
             <ul class="nav navbar-nav">
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
@@ -226,13 +269,13 @@
                     <li class='@TempData["Country"]'>
                         <a href='@Url.Action("Country", "Admin")'><i class="fa fa-code-fork"></i>  Country</a>
                     </li>-->
-                    @*<li class='@TempData["Operation"]'>
+            @*<li class='@TempData["Operation"]'>
                     <a href='@Url.Action("Operation", "Admin")'><i class="fa fa-code-fork"></i>  Operation</a>
                 </li>
                 <li class='@TempData["Operation"]'>
                     <a href='@Url.Action("Operation", "Admin")'><i class="fa fa-code-fork"></i>  Operation</a>
                 </li>*@
-                <!--</ul>
+            <!--</ul>
             </li>
             <li class='@TempData["Purchase"] treeview'>
                 <a href="#">
@@ -308,14 +351,14 @@
                 </ul>
             </li>-->
             @*<li class='@TempData["Payments"]'>
-            <a href='@Url.Action("Payments", "Dashboard")'><i class="fa fa-file-text"></i> Payments</a>
-        </li>
-        <li class='@TempData["PurchaseOrders"]'>
-            <a href='@Url.Action("PurchaseOrders", "Dashboard")'><i class="fa fa-file-text"></i> Purchase Orders</a>
-        </li>
-        <li class='@TempData["Invoices"]'>
-            <a href='@Url.Action("Invoices", "Dashboard")'><i class="fa fa-file-text"></i> Invoices</a>
-        </li>*@
+                    <a href='@Url.Action("Payments", "Dashboard")'><i class="fa fa-file-text"></i> Payments</a>
+                </li>
+                <li class='@TempData["PurchaseOrders"]'>
+                    <a href='@Url.Action("PurchaseOrders", "Dashboard")'><i class="fa fa-file-text"></i> Purchase Orders</a>
+                </li>
+                <li class='@TempData["Invoices"]'>
+                    <a href='@Url.Action("Invoices", "Dashboard")'><i class="fa fa-file-text"></i> Invoices</a>
+                </li>*@
         </ul>
     </section>
 </aside>
