Again Assign IN PO Assign Vendor Invoice in Requested Invoice Order by Requested Invoice Date in Requested Invoice

--- a/Views/Admin/RequestedInvoice.cshtml
+++ b/Views/Admin/RequestedInvoice.cshtml
@@ -88,6 +88,7 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
                                     <th>Requested By</th>
                                     <th>Requested Date</th>
+                                    <th>Vendor Invoice</th>
                                     <th>Invoice</th>
                                     <th>Invoice Date</th>
                                     <th>Invoice</th>
@@ -96,59 +97,60 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
+                                <tr>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.RInvoiceNo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td>
+                                        <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                    </td>
+                                    <td>
+                                        @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Edit", @target = "_blank" })
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.RequestedBy)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
+                                    <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
+                                    @if (!string.IsNullOrEmpty(item.InvUpload))
+                                    {
+                                        <td><a href='~/Content/upload/poreqinvoice/@item.InvUpload' target="_blank">@item.InvoiceNo</a></td>
+                                    }
+                                    else
+                                    {
                                         <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.RInvoiceNo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    }
+                                    @if (!string.IsNullOrEmpty(item.InvUpload))
+                                    {
                                         <td>
-                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
-                                        </td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Edit", @target = "_blank" })
-                                        </td>
-                                        <td>@Html.DisplayFor(modelItem => item.RequestedBy)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
-                                        @if (!string.IsNullOrEmpty(item.InvUpload))
-                                        {
-                                            <td><a href='~/Content/upload/poreqinvoice/@item.InvUpload' target="_blank">@item.InvoiceNo</a></td>
-                                        }
-                                        else
-                                        {
-                                            <td></td>
-                                        }
-                                        @if (!string.IsNullOrEmpty(item.InvUpload))
-                                        {
-                                            <td>
-                                                @if (item.InvUploadDate == "01-01-1900")
-                                                {
-
-                                                }
-                                                else
-                                                {
-                                                    @Html.DisplayFor(modelItem => item.InvUploadDate)
-                                                }
-                                            </td>
-                                        }
-                                        else
-                                        {
-                                            <td></td>
-                                        }
-                                        <td>
-                                            @if (Model.UserProfileModels.EmpType == "User")
+                                            @if (item.InvUploadDate == "01-01-1900")
                                             {
-                                                if (item.Status != "SO")
-                                                {
-                                                    @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
-                                                                 new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
-                                                }
+
                                             }
                                             else
                                             {
-                                                @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
-                                                                     new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
+                                                @Html.DisplayFor(modelItem => item.InvUploadDate)
                                             }
                                         </td>
-                                    </tr>
+                                    }
+                                    else
+                                    {
+                                        <td></td>
+                                    }
+                                    <td>
+                                        @if (Model.UserProfileModels.EmpType == "User")
+                                        {
+                                            if (item.Status != "SO")
+                                            {
+                                                @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
+                                                             new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
+                                            }
+                                        }
+                                        else
+                                        {
+                                            @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
+                                                                 new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
+                                        }
+                                    </td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
