--- a/Views/Admin/MaterialPickup.cshtml
+++ b/Views/Admin/MaterialPickup.cshtml
@@ -75,7 +75,7 @@
                                 </button>
                             </div>
                         </div>
-                        <table id="tblMaterialPickup" class="table table-bordered display nowrap">
+                        <table id="tblMaterialPickup" class="table table-bordered display">
                             <thead>
                                 <tr>
                                     <th>SNo</th>
