--- a/Views/Admin/RequestPayment.cshtml
+++ b/Views/Admin/RequestPayment.cshtml
@@ -114,89 +114,91 @@
                                 {
                                     if (item.Status == "Success")
                                     {
-                                        <tr class="suc-tbl-row">
-                                            <td></td>
-                                            <td>
-                                                @if (item.POADate == "01-01-1900")
-                                                {
+                                <tr class="suc-tbl-row">
+                                    <td></td>
+                                    <td>
+                                        @if (item.POADate == "01-01-1900")
+                                        {
 
-                                                }
-                                                else
-                                                {
-                                                    @Html.DisplayFor(modelItem => item.POADate)
-                                                }
-                                            </td>
-                                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                            <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
-                                            <td>
-                                                @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
-                                            </td>
-                                            <td>
-                                                @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
-                                            </td>
-                                            @if (!string.IsNullOrEmpty(item.PIUpload))
-                                            {
-                                                <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
-                                            }
-                                            else
-                                            {
-                                                <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
-                                            }
-                                            <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                            <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                            <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                         new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                            </td>
-                                        </tr>
+                                        }
+                                        else
+                                        {
+                                            @Html.DisplayFor(modelItem => item.POADate)
+                                        }
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    @*<td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>*@
+                                    <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                    <td>
+                                        @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
+                                    </td>
+                                    <td>
+                                        @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
+                                    </td>
+                                    @if (!string.IsNullOrEmpty(item.PIUpload))
+                                    {
+                                        <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
                                     }
                                     else
                                     {
-                                        <tr>
-                                            <td></td>
-                                            <td>
-                                                @if (item.POADate == "01/01/1900")
-                                                {
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                    }
+                                    <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                    <td>
+                                        @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                                 new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                    </td>
+                                </tr>
+                                    }
+                                    else
+                                    {
+                            <tr>
+                                <td></td>
+                                <td>
+                                    @if (item.POADate == "01/01/1900")
+                                    {
 
-                                                }
-                                                else
-                                                {
-                                                    @Html.DisplayFor(modelItem => item.POADate)
-                                                }
-                                            </td>
-                                            <td> @Html.DisplayFor(modelItem => item.OrderDate) </td>
-                                            <td> @Html.DisplayFor(modelItem => item.CustomerName) </td>
-                                            <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank"> @item.PONumber </a></td>
-                                            <td>
-                                                @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
-                                            </td>
-                                            <td>
-                                                @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
-                                            </td>
-                                            @if (!string.IsNullOrEmpty(item.PIUpload))
-                                            {
-                                                <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank"> @item.VendorId </a></td>
-                                            }
-                                            else
-                                            {
-                                                <td> @Html.DisplayFor(modelItem => item.VendorId) </td>
-                                            }
-                                            <td> @Html.DisplayFor(modelItem => item.VendorPrice) </td>
-                                            <td> @Html.DisplayFor(modelItem => item.Price) </td>
-                                            <td> @Html.DisplayFor(modelItem => item.Margin) </td>
-                                            <td> @Html.DisplayFor(modelItem => item.LMRemarks) </td>
-                                            <td> @Html.DisplayFor(modelItem => item.POAssignTo) </td>
-                                            <td> @Html.DisplayFor(modelItem => item.Status) </td>
-                                            <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                         new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                            </td>
-                                        </tr>
+                                    }
+                                    else
+                                    {
+                                        @Html.DisplayFor(modelItem => item.POADate)
+                                    }
+                                </td>
+                                <td> @Html.DisplayFor(modelItem => item.OrderDate) </td>
+                                <td> @Html.DisplayFor(modelItem => item.CustomerName) </td>
+                                @*<td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>*@
+                                <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                <td>
+                                    @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
+                                </td>
+                                <td>
+                                    @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
+                                </td>
+                                @if (!string.IsNullOrEmpty(item.PIUpload))
+                                {
+                                    <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank"> @item.VendorId </a></td>
+                                }
+                                else
+                                {
+                                    <td> @Html.DisplayFor(modelItem => item.VendorId) </td>
+                                }
+                                <td> @Html.DisplayFor(modelItem => item.VendorPrice) </td>
+                                <td> @Html.DisplayFor(modelItem => item.Price) </td>
+                                <td> @Html.DisplayFor(modelItem => item.Margin) </td>
+                                <td> @Html.DisplayFor(modelItem => item.LMRemarks) </td>
+                                <td> @Html.DisplayFor(modelItem => item.POAssignTo) </td>
+                                <td> @Html.DisplayFor(modelItem => item.Status) </td>
+                                <td>
+                                    @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                             new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                </td>
+                            </tr>
                                     }
                                 }
                             </tbody>
